--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "packageManager": "npm@11.6.2",
+  "packageManager": "npm@11.6.4",
   "workspaces": [
     "packages/*"
   ],
@@ -22,13 +22,14 @@
     "lit-html": "^3.3.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.4",
-    "@swc/core": "^1.15.1",
-    "@types/node": "^24.10.0",
-    "turbo": "^2.1.3",
+    "@biomejs/biome": "^2.3.8",
+    "@swc/core": "^1.15.3",
+    "@types/node": "^24.10.1",
+    "turbo": "^2.6.1",
     "typescript": "~5.9.3",
-    "unplugin-swc": "^1.5.8",
-    "vite": "^7.2.2",
-    "vite-tsconfig-paths": "^5.1.4"
+    "unplugin-swc": "^1.5.9",
+    "vite": "^7.2.6",
+    "vite-tsconfig-paths": "^5.1.4",
+    "zshy": "^0.6.0"
   }
 }
