--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "packageManager": "npm@11.6.4",
+  "packageManager": "npm@11.7.0",
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "scripts": {
-    "dev": "turbo run dev --filter=@web-kit/core",
+    "dev": "turbo run dev --filter=demo",
     "build": "turbo run build",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
@@ -18,18 +19,17 @@
     "format": "turbo run format",
     "format:fix": "turbo run format:fix"
   },
-  "dependencies": {
-    "lit-html": "^3.3.1"
-  },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
     "@swc/core": "^1.15.3",
-    "@types/node": "^24.10.1",
-    "turbo": "^2.6.1",
+    "@types/node": "^25.0.1",
+    "jsdom": "^27.3.0",
+    "turbo": "^2.6.3",
     "typescript": "~5.9.3",
     "unplugin-swc": "^1.5.9",
-    "vite": "^7.2.6",
+    "vite": "^7.2.7",
     "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.15",
     "zshy": "^0.6.0"
   }
 }
