--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -27,9 +27,9 @@ jobs:
         run: npm run lint
 
       - name: Build packages
-        run: npm run build
+        run: npm run clean && npm run build -- --force
 
       - name: Publish to NPM
-        run: npm run build && npm publish --workspaces --access public
+        run: npm publish --workspaces --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
