--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@easemate/web-kit",
-  "version": "0.1.2",
-  "description": "Web components for easemate - a UI kit for animation libraries",
+  "version": "0.1.3",
+  "description": "UI kit of web components for easemate - a typescript animation library",
   "type": "module",
   "files": [
     "build"
