--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": true,
     "declarationMap": false,
     "baseUrl": ".",
-    "types": [],
+    "types": ["react"],
     "paths": {
       "@/*": ["./src/decorators/*"],
       "~/*": ["./src/*"]
